// Copyright 2018 Pax Automa Systems, Inc.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//    http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gatekeeper;

message AuthorizeDiagUploadReq {
    string install_id = 1;
}

message AuthorizeDiagUploadResp {
    string policy = 1;
    string signature = 2;
    string url = 3;
    string date = 4;
    string credential =5;
}

message UpgradeCheckReq {
    string cluster_id = 1;
    string current_version = 2;
}

message UpgradeCheckResp {
    string available_version = 1;
    repeated string download_urls = 2;
}

service Gatekeeper {
    rpc AuthorizeDiagUpload (AuthorizeDiagUploadReq) returns (AuthorizeDiagUploadResp);
    rpc UpgradeCheck (UpgradeCheckReq) returns (UpgradeCheckResp);
}
